--- a/src/stylesheets/global.scss
+++ b/src/stylesheets/global.scss
@@ -1,4 +1,11 @@
 @import "../../node_modules/normalize-scss/sass/normalize/import-now";
 
+@import "bootstrap/bootstrap-grid";
+
+@import "imports";
+
+@import "base/base";
+@import "base/fonts";
+
 @import "modules/header";
 @import "modules/footer";
