--- a/src/stylesheets/test.scss
+++ b/src/stylesheets/test.scss
@@ -1,3 +1,55 @@
+@import "imports";
+
 .test {
-	background: rgba(70, 151, 156, 0.37);
+	&__section {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		padding-top: 40px;
+		padding-bottom: 40px;
+
+		@include media-breakpoint-up(md) {
+			height: 100vh;
+		}
+
+		&_1 {
+			padding-top: 122px;
+			background: #e4e73e;
+			@include media-breakpoint-up(md) {
+				padding-top: 82px;
+			}
+			@include media-breakpoint-up(lg) {
+				background: linear-gradient(to top, #daa969, #e4e73e);
+			}
+		}
+		&_2 {
+			background-color: rgb(122, 211, 87);
+			@include media-breakpoint-up(lg) {
+				background: linear-gradient(to bottom, rgb(122, 211, 87), rgb(59, 156, 21));
+			}
+		}
+		&_3 {
+			background-color: rgb(87, 192, 211);
+			@include media-breakpoint-up(lg) {
+				background: linear-gradient(to bottom, rgb(87, 192, 211), rgb(19, 152, 175));
+			}
+		}
+	}
+	&__holder {
+		max-width: 768px;
+		margin: 0 auto;
+	}
+	&__title {
+		margin-bottom: 40px;
+	}
+	&__img {
+		width: 200px;
+		margin-bottom: 20px;
+		img {
+			max-width: 100%;
+		}
+	}
+	p {
+		margin-bottom: 20px;
+	}
 }
