--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -59,4 +59,5 @@ img[draggable="false"] {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    transition: transform .5s ease-in-out;
 }
