--- a/src/html/layouts/base.twig
+++ b/src/html/layouts/base.twig
@@ -36,6 +36,7 @@
 			{% include "../partials/header.twig" with { navigation: header.navigation } %}
 		{% endblock %}
 		{# .js-page-content is used for modal mobile fixes (see modal.js) and smooth scrolling #}
+		{% include "../partials/ham-panel.twig" %}
 		<div class="page-content js-page-content">
 				<main>
 					{% block body %}{% endblock %}
@@ -49,5 +50,7 @@
 		</div>
 	</div>
 	<script src="/assets/javascripts/index.js"></script>
+	<script src="/assets/javascripts/svg4everybody.js"></script>
+	<script>svg4everybody();</script>
 </body>
 </html>
