--- a/src/stylesheets/modules/_header.scss
+++ b/src/stylesheets/modules/_header.scss
@@ -127,6 +127,10 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
+		transition: all .4s;
+		top: 0;
+		bottom: 0;
+		margin: auto 0;
 	}
 
 	&:before {
@@ -138,9 +142,18 @@
 	&:after {
 		height: 3px;
 		background: #000;
-		top: 0;
-		bottom: 0;
-		margin: auto 0;
 		border-radius: 3px;
+	}
+
+	&.active {
+		&:before { 
+			transform: rotate(45deg);
+			border-bottom: none;
+			height: 3px;
+		}
+
+		&:after {
+			transform: rotate(-45deg);
+		}		
 	}
 }
