--- a/src/stylesheets/test.scss
+++ b/src/stylesheets/test.scss
@@ -14,20 +14,24 @@
 
 		&_1 {
 			padding-top: 122px;
-			background: #e4e73e;
+			//background: #e4e73e;
+			height: 490px;
+			position: relative;
 			@include media-breakpoint-up(md) {
 				padding-top: 82px;
 			}
 			@include media-breakpoint-up(lg) {
-				background: linear-gradient(to top, #daa969, #e4e73e);
+				//background: linear-gradient(to top, #daa969, #e4e73e);
 			}
 		}
+
 		&_2 {
 			background-color: rgb(122, 211, 87);
 			@include media-breakpoint-up(lg) {
 				background: linear-gradient(to bottom, rgb(122, 211, 87), rgb(59, 156, 21));
 			}
 		}
+
 		&_3 {
 			background-color: rgb(87, 192, 211);
 			@include media-breakpoint-up(lg) {
@@ -35,20 +39,40 @@
 			}
 		}
 	}
+
+	&__canvas {
+		width: 100%; 
+		height: 100%; 
+		padding: 0;
+		margin: 0;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+
 	&__holder {
 		max-width: 768px;
 		margin: 0 auto;
 	}
+
+	&__content {
+		display: flex;
+		align-items: center;
+	}
+
 	&__title {
 		margin-bottom: 40px;
 	}
+
 	&__img {
 		width: 200px;
 		margin-bottom: 20px;
+
 		img {
 			max-width: 100%;
 		}
 	}
+
 	p {
 		margin-bottom: 20px;
 	}
