--- a/src/html/layouts/base.twig
+++ b/src/html/layouts/base.twig
@@ -50,7 +50,7 @@
 		</div>
 	</div>
 	<script src="assets/javascripts/index.js"></script>
-	<script src="assets/javascripts/svg4everybody.js"></script>
-	<script>svg4everybody();</script>
+	{#<script src="assets/javascripts/svg4everybody.js"></script>
+	<script>svg4everybody();</script>#}
 </body>
 </html>
