--- a/src/html/macros/icon.twig
+++ b/src/html/macros/icon.twig
@@ -11,7 +11,7 @@
 #}
 
 {% macro icon(name, attrs) %}
-    {%- set filename = '/assets/images/icons.svg' %}
+    {%- set filename = 'assets/images/icons.svg' %}
     {%- set width = 0 %}
     {%- set height = 0 %}
     {%- set style = '' %}
