--- a/src/html/layouts/base.twig
+++ b/src/html/layouts/base.twig
@@ -16,7 +16,7 @@
 			document.documentElement.style.setProperty('--viewport-height-actual', window.innerHeight + 'px');
 		}
 	</script>
-	<link rel="stylesheet" href="/assets/stylesheets/global.css" />
+	<link rel="stylesheet" href="assets/stylesheets/global.css" />
 	{% block stylesheets %}{% endblock %}
 	{#
 
@@ -49,8 +49,11 @@
 				{% block modal %}{% endblock %}
 		</div>
 	</div>
-	<script src="/assets/javascripts/index.js"></script>
-	<script src="/assets/javascripts/svg4everybody.js"></script>
-	<script>svg4everybody();</script>
+	
+	<script src="assets/javascripts/main.js"></script>
+	{% block javascripts %}{% endblock %}
+	
+	{# <script src="assets/javascripts/svg4everybody.js"></script>
+	<script>svg4everybody();</script> #}
 </body>
 </html>
