--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -285,7 +285,9 @@
 							</div>
 							<div class="col-md-6 offset-md-1">
 								<h2 class="test__title">About Us</h2>
-								<div class="test__img">
+								<div class="test__img" id="slider">
+									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
+									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
 									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
 								</div>
 								{{ icon('social-youtube' , {'width': 20, 'height': 20}) }}
@@ -356,4 +358,8 @@
 
 {% block stylesheets %}
     <link rel="stylesheet" href="assets/stylesheets/test.css" />
+{% endblock %}
+
+{% block javascripts %}
+    <script src="assets/javascripts/test.js"></script>
 {% endblock %}
