--- a/src/html/layouts/base.twig
+++ b/src/html/layouts/base.twig
@@ -52,7 +52,7 @@
 	
 	{% block javascripts %}{% endblock %}
 
-	{# <script src="assets/javascripts/svg4everybody.js"></script>
-	<script>svg4everybody();</script> #}
+	{# <script src="assets/javascripts/svg4everybody.js"></script>#}
+	{# <script>svg4everybody();</script> #}
 </body>
 </html>
