--- a/src/stylesheets/components/_slick.scss
+++ b/src/stylesheets/components/_slick.scss
@@ -98,3 +98,128 @@
 .slick-arrow.slick-hidden {
     display: none;
 }
+
+.slider {
+  position: relative;
+  
+  .slick-track {
+    height: 400px;
+  }
+
+  &__item {
+    width: 100%;
+    height: 400px;
+    background-size: cover;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    display: block;
+  }
+
+  &__nav {
+    z-index: 999;
+
+    .slick-arrow {
+      width: 40px;
+      height: 40px;
+      border: none;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin: auto 0;
+      background-color: transparent;
+      cursor: pointer;
+
+      &:before {
+          content: '';
+          position: absolute;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          top: 0;
+          margin: auto;
+          border-top: 3px solid #fff;
+          opacity: 1;
+          width: 30px;
+          height: 30px;
+      }
+
+      &.slick-disabled {
+        pointer-events: none;
+
+        &:before {
+          opacity: .5;
+        }
+      }
+      
+      &.prev {
+        left: 40px;
+
+        &:before {
+            border-left: 3px solid #fff;
+            transform: rotate(-45deg);
+        }
+      }
+
+      &.next {
+        right: 40px;
+
+        &:before {
+            border-right: 3px solid #fff;
+            transform: rotate(45deg);
+        }
+      }
+    }
+  }
+  .slick-dots {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+    position: absolute;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    li {
+      margin: 0 10px;
+      position: relative;
+      cursor: pointer;
+      width: 20px;
+      height: 20px;
+
+      &:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        border: 2px solid #fff;
+      }
+
+      &:after {
+        content: '';
+        position: absolute;
+        width: 50%;
+        height: 50%;
+        border-radius: 50%;
+        background-color:  #fff;
+        margin: auto;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        opacity: 0;
+        transition: opacity .3s ease-in-out, width .3s ease-in-out, height .3s ease-in-out;
+      }
+
+      &.slick-active:after {
+        opacity: 1;
+      }
+
+      button {
+        display: none;
+      }
+    }
+  }
+}
