--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -9,6 +9,24 @@
 
 {% block body %}
 		<div class="test">
+			<section class="test__section preface" style="background-image: url(assets/images/test/back.jpg);" data-scroll-section>
+				<div class="container">
+					<div class="preface__holder">
+						<h1 class="preface__title">Болезнь крона <br> и язвенный колит</h1>
+						<div class="preface__subtitle">Воспалительные заболевания кишечника ВЗК</div>
+						<div class="preface__caption">
+							<div class="preface__caption__border">
+								<i></i><i></i>
+							</div>
+							<b>Более 5 млн людей</b>
+							страдают в мире от взк
+						</div>
+						<div class="preface__btn">
+							<a class="button button_size_xs" href="/vzk/"><span class="button__inner">ПОДРОБНЕЕ</span></a>
+						</div>
+					</div>
+				</div>
+			</section>
 			<section class="test__section test__section_1" data-scroll-section>
 				<canvas id="canvas" class="test__canvas"></canvas>
 				<div class="container">
@@ -289,8 +307,15 @@
 									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
 								</div>
 								{{ icon('social-youtube' , {'width': 20, 'height': 20}) }}
+						<h2 class="test__title">Slider</h2>
+						<div class="slider slider_bottomed test__slider">
+							<div class="slider__holder" id="slider">
+								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
+								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
+								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
 							</div>
 						</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a justo aliquet, vulputate ligula at, placerat est. Aenean in orci accumsan, commodo ante a, sodales nibh. Phasellus venenatis eu ipsum non lobortis. Donec vehicula enim a venenatis lacinia. Maecenas et pharetra diam, et imperdiet ante. </p>
 					</div>
 				</div>
 			</section>
