--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -296,7 +296,7 @@
 			<section class="test__section test__section_2" data-scroll-section>
 				<div class="container">
 					<div class="test__holder">
-						<div class="slider">
+						<div class="slider slider_bottomed">
 							<div class="slider__holder" id="slider">
 								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
 								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
