--- a/public/assets/stylesheets/global.css
+++ b/public/assets/stylesheets/global.css
@@ -5832,7 +5832,7 @@ html {
 }
 
 body {
-  font: normal 1.6rem/1.375em "Object Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: normal 1.6rem/1.375em "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   min-height: 100vh;
   min-height: var(--viewport-height);
   margin: 0;
@@ -5890,9 +5890,25 @@ img[draggable="false"] {
 }
 
 @font-face {
-  font-family: 'Object Sans';
-  src: url("../fonts/object-sans/ObjectSans-Regular.woff2") format("woff2"), url("../fonts/object-sans/ObjectSans-Regular.woff") format("woff"), url("../fonts/object-sans/ObjectSans-Regular.ttf") format("truetype");
+  font-family: 'Roboto';
+  src: url("../fonts/roboto/RobotoRegular/RobotoRegular.woff") format("woff"), url("../fonts/roboto/RobotoRegular/RobotoRegular.ttf") format("truetype");
   font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url("../fonts/roboto/RobotoLight/RobotoLight.woff") format("woff"), url("../fonts/roboto/RobotoLight/RobotoLight.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url("../fonts/roboto/RobotoBold/RobotoBold.woff") format("woff"), url("../fonts/roboto/RobotoBold/RobotoBold.ttf") format("truetype");
+  font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
