--- a/src/stylesheets/base/_fonts.scss
+++ b/src/stylesheets/base/_fonts.scss
@@ -1,9 +1,29 @@
 @font-face {
-    $path-font-face: '../fonts/object-sans/ObjectSans-Regular';
-    font-family: 'Object Sans';
-    src: url('#{$path-font-face}.woff2') format('woff2'), url('#{$path-font-face}.woff') format('woff'), url('#{$path-font-face}.ttf') format('truetype');
+    $path-font-face: '../fonts/roboto/RobotoRegular/RobotoRegular';
+    font-family: 'Roboto';
+    src: url('#{$path-font-face}.woff') format('woff'), url('#{$path-font-face}.ttf') format('truetype');
     //src: url('#{$path-font-face}.ttf') format('truetype');
     font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    $path-font-face: '../fonts/roboto/RobotoLight/RobotoLight';
+    font-family: 'Roboto';
+    src: url('#{$path-font-face}.woff') format('woff'), url('#{$path-font-face}.ttf') format('truetype');
+    //src: url('#{$path-font-face}.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    $path-font-face: '../fonts/roboto/RobotoBold/RobotoBold';
+    font-family: 'Roboto';
+    src: url('#{$path-font-face}.woff') format('woff'), url('#{$path-font-face}.ttf') format('truetype');
+    //src: url('#{$path-font-face}.ttf') format('truetype');
+    font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
