--- a/src/stylesheets/test.scss
+++ b/src/stylesheets/test.scss
@@ -149,7 +149,7 @@
 		line-height: 28px;
 		position: relative;
 		padding: 30px 35px;
-		margin-bottom: 78px;
+		margin-bottom: 70px;
 
 		b {
 			display: block;
@@ -238,6 +238,7 @@
 		text-decoration: none;
 		padding: 12px 50px;
     border-radius: 20px;
+		font-weight: 300;
 
 		&__inner {
 			display: -webkit-box;
