--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -22,7 +22,7 @@ body {
     min-height: var(--viewport-height);
     margin: 0;
     position: relative;
-    font-family: "Object Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 1.6rem;
     line-height: 22 / 16 * 1em;
     font-weight: normal;
