--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -16,7 +16,7 @@
 						<div class="row">
 							<div class="col-md-5">
 								<div class="test__img">
-									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
+									<img src="assets/images/test/3-xl.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-md-6 offset-md-1 test__content">
@@ -346,6 +346,13 @@
 					</div>
 				</div>
 			</section>
+			<div class="remodal-wrapper remodal-is-opened" style="display: block;">
+				<div class="modal success-modal article-modal remodal remodal-is-initialized remodal-is-opened" data-remodal-id="success-modal" tabindex="-1">
+					<button data-remodal-action="close" class="modal__close"></button>
+					<h3 class="title3 title3_grey modal__title">Вы успешно зарегистрировались</h3>
+					<div class="success-modal__subtitle">на сайте <a href="nevrologia.info">nevrologia.info</a></div>
+					<button data-remodal-action="close" class="btn btn_wide get-article-form__btn">продолжить</button>
+				</div>
 		</div>
 {% endblock %}
 
