--- a/public/assets/stylesheets/global.css
+++ b/public/assets/stylesheets/global.css
@@ -6316,3 +6316,53 @@ img[draggable="false"] {
     transform: translateX(0);
   }
 }
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.preloader {
+  background: #d8c6c6;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+.preloader__loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 4px solid rgba(226, 217, 217, 0.1);
+  border-left-color: #1de40b;
+  -webkit-animation: spin .8s linear infinite;
+  animation: spin .8s linear infinite;
+}
