--- a/src/html/layouts/base.twig
+++ b/src/html/layouts/base.twig
@@ -32,6 +32,7 @@
 </head>
 <body>
 	<div class="page-content-wrapper js-page-content-wrapper">
+		{% include "../partials/preloader.twig" %}
 		{% block header %}
 			{% include "../partials/header.twig" with { navigation: header.navigation } %}
 		{% endblock %}
