--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -12,14 +12,13 @@
 			<section class="test__section preface" style="background-image: url(assets/images/test/back.jpg);" data-scroll-section>
 				<div class="container">
 					<div class="preface__holder">
-						<h1 class="preface__title">Болезнь крона <br> и язвенный колит</h1>
-						<div class="preface__subtitle">Воспалительные заболевания кишечника ВЗК</div>
+						<h1 class="preface__title">Test</h1>
+						<div class="preface__subtitle">page</div>
 						<div class="preface__caption">
 							<div class="preface__caption__border">
 								<i></i><i></i>
 							</div>
-							<b>Более 5 млн людей</b>
-							страдают в мире от взк
+							<b>caption</b>
 						</div>
 						<div class="preface__btn">
 							<a class="button button_size_xs" href="/vzk/"><span class="button__inner">ПОДРОБНЕЕ</span></a>
