--- a/public/assets/stylesheets/test.css
+++ b/public/assets/stylesheets/test.css
@@ -247,6 +247,238 @@
   bottom: 60px;
 }
 
+.remodal,
+[data-remodal-id] {
+  display: none;
+}
+
+.article-modal {
+  padding: 3.8rem 5rem;
+}
+
+.modal {
+  display: none;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+  -webkit-overflow-scrolling: touch;
+  outline: 0;
+}
+
+.modal {
+  background: #fff;
+  border-radius: 0.8rem;
+  font-size: 1.6rem;
+  max-width: 85.2rem;
+  text-align: left;
+}
+
+.remodal,
+.remodal-wrapper:after {
+  vertical-align: middle;
+}
+
+.remodal-overlay,
+.remodal-wrapper {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.remodal-wrapper {
+  position: fixed;
+  z-index: 10000;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: none;
+  overflow: auto;
+  text-align: center;
+  -webkit-overflow-scrolling: touch;
+}
+
+.remodal-wrapper:after {
+  display: inline-block;
+  height: 100%;
+  margin-left: -0.05em;
+  content: "";
+}
+
+.remodal,
+.remodal-wrapper:after {
+  vertical-align: middle;
+}
+
+.remodal-is-initialized {
+  display: inline-block;
+}
+
+.remodal {
+  position: relative;
+  outline: none;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+
+.success-modal {
+  text-align: center;
+  padding: 3.6rem 4rem;
+  max-width: 37.2rem;
+  overflow: visible;
+}
+
+@media (min-width: 992px) {
+  .success-modal {
+    padding: 3.6rem 7rem;
+    max-width: 85.2rem;
+  }
+}
+
+.success-modal:before {
+  content: '';
+  display: inline-block;
+  vertical-align: top;
+  width: 115px;
+  height: 115px;
+  margin-bottom: 1rem;
+  background: url(../images/test/check.svg);
+  background-size: cover;
+}
+
+@media (min-width: 992px) {
+  .success-modal:before {
+    width: 131px;
+    height: 131px;
+  }
+}
+
+.success-modal h3 {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 38px;
+  margin-bottom: 0.7rem;
+}
+
+@media (min-width: 992px) {
+  .success-modal h3 {
+    font-size: 40px;
+    line-height: 55px;
+  }
+}
+
+.success-modal__subtitle {
+  font-size: 22px;
+  line-height: 30px;
+  margin-bottom: 7.5rem;
+}
+
+@media (min-width: 992px) {
+  .success-modal__subtitle {
+    font-size: 33px;
+    line-height: 45px;
+  }
+}
+
+.success-modal__subtitle a {
+  font-style: italic;
+  font-weight: 500;
+  color: #E1AA57;
+  text-decoration: none;
+  font-size: 24px;
+  line-height: 33px;
+}
+
+@media (min-width: 992px) {
+  .success-modal__subtitle a {
+    font-size: 35px;
+    line-height: 48px;
+  }
+}
+
+.success-modal .btn {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  background: #E1AA57;
+  border-radius: 7rem;
+  border: 0;
+  color: #fff;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: -webkit-inline-flex;
+  display: inline-flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  min-width: 0;
+  outline: none;
+  padding: 1.3rem 3.5rem;
+  text-decoration: none;
+  -webkit-transition: background 0.3s, border 0.3s, color 0.3s;
+  transition: background 0.3s, border 0.3s, color 0.3s;
+  font-weight: 500;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 20px;
+  line-height: 27px;
+}
+
+@media (min-width: 992px) {
+  .success-modal .btn {
+    font-size: 28px;
+    line-height: 38px;
+    padding: 2.2rem 3.6rem;
+  }
+}
+
+.success-modal .modal__close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 28px;
+  height: 28px;
+  background: none;
+  border: none;
+}
+
+@media (min-width: 992px) {
+  .success-modal .modal__close {
+    top: 5px;
+    right: -35px;
+  }
+}
+
+.success-modal .modal__close:before {
+  position: absolute;
+  width: 28px;
+  border-bottom: 6px solid #E1AA57;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  content: "";
+  left: 0;
+  top: calc(50%);
+}
+
+.success-modal .modal__close:after {
+  content: "";
+  position: absolute;
+  width: 28px;
+  border-bottom: 6px solid #E1AA57;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  left: 0;
+  top: calc(50%);
+}
+
 .test {
   color: #fff;
 }
