--- a/src/stylesheets/base/_fonts.scss
+++ b/src/stylesheets/base/_fonts.scss
@@ -1,8 +1,7 @@
 @font-face {
     $path-font-face: '../fonts/roboto/RobotoRegular/RobotoRegular';
     font-family: 'Roboto';
-    src: url('#{$path-font-face}.woff') format('woff'), url('#{$path-font-face}.ttf') format('truetype');
-    //src: url('#{$path-font-face}.ttf') format('truetype');
+    src: local('Roboto'), url('#{$path-font-face}.woff') format('woff'), url('#{$path-font-face}.eot') format('eot'), url('#{$path-font-face}.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -11,8 +10,7 @@
 @font-face {
     $path-font-face: '../fonts/roboto/RobotoLight/RobotoLight';
     font-family: 'Roboto';
-    src: url('#{$path-font-face}.woff') format('woff'), url('#{$path-font-face}.ttf') format('truetype');
-    //src: url('#{$path-font-face}.ttf') format('truetype');
+    src: local('Roboto'), url('#{$path-font-face}.woff') format('woff'), url('#{$path-font-face}.eot') format('eot'),url('#{$path-font-face}.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -21,8 +19,7 @@
 @font-face {
     $path-font-face: '../fonts/roboto/RobotoBold/RobotoBold';
     font-family: 'Roboto';
-    src: url('#{$path-font-face}.woff') format('woff'), url('#{$path-font-face}.ttf') format('truetype');
-    //src: url('#{$path-font-face}.ttf') format('truetype');
+    src: local('Roboto'), url('#{$path-font-face}.woff') format('woff'), url('#{$path-font-face}.eot') format('eot'),url('#{$path-font-face}.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
