--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -26,6 +26,10 @@ body {
     font-size: 1.6rem;
     line-height: 22 / 16 * 1em;
     font-weight: normal;
+
+    &.fixed {
+        overflow-y: hidden;
+    }
 }
 
 h1,
