--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -21,7 +21,7 @@
 							<b>caption</b>
 						</div>
 						<div class="preface__btn">
-							<a class="button button_size_xs" href="/vzk/"><span class="button__inner">ПОДРОБНЕЕ</span></a>
+							<a class="button button_size_xs popup-modal" href="#test-modal"><span class="button__inner">ПОДРОБНЕЕ</span></a>
 						</div>
 					</div>
 				</div>
@@ -366,6 +366,10 @@
 			</section>
 {% endblock %}
 
+{% block modal %}
+
+{% endblock %}
+
 {% block stylesheets %}
     <link rel="stylesheet" href="assets/stylesheets/test.css" />
 {% endblock %}
@@ -373,3 +377,5 @@
 {% block javascripts %}
     <script src="assets/javascripts/test.js"></script>
 {% endblock %}
+
+
