--- a/src/stylesheets/modules/_preloader.scss
+++ b/src/stylesheets/modules/_preloader.scss
@@ -8,13 +8,15 @@
 }
 
 .preloader {
-	background-color: rgb(216, 198, 198);
 	position: fixed;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
 	z-index: 1000;
+	background: linear-gradient(149deg, rgba(24,187,156,1) 0%, rgb(92, 149, 172) 42%, rgb(84, 81, 228) 72%, rgb(34, 131, 170) 100%);
+	animation: gradient 10s infinite linear; 
+	background-size: 400%; 
 
 	&__loader {
 		position: absolute;
@@ -26,8 +28,20 @@
 		width: 30px;
 		height: 30px;
 		border-radius: 50%;
-		border: 4px solid rgba(226, 217, 217, 0.1);
-  	border-left-color: #1de40b;
+		border: 4px solid rgba(226, 217, 217, 0.3);
+  	border-left-color: #2b91f1;
 		animation: spin .8s linear infinite;
+	}
+}
+
+@keyframes gradient {
+	0% {
+			background-position: 80% 0%;
+	}
+	50% {
+			background-position: 20% 100%;
+	}
+	100% {
+			background-position: 80% 0%;
 	}
 }
