sass-tilde-importer & sass min

--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -375,7 +375,7 @@
 {% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="assets/stylesheets/test.css" />
+    <link rel="stylesheet" href="assets/stylesheets/test.min.css" />
 {% endblock %}
 
 {% block javascripts %}
