--- a/src/html/index.twig
+++ b/src/html/index.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="assets/stylesheets/landing.css" />
+    <link rel="stylesheet" href="assets/stylesheets/landing.min.css" />
 {% endblock %}
 
 {% block javascripts %}
