--- a/src/stylesheets/test.scss
+++ b/src/stylesheets/test.scss
@@ -1,7 +1,7 @@
 @import "imports";
 
-@import "components/slick";
-
+@import "~slick-carousel/slick/slick";
+@import "modules/slider";
 @import "modules/modal";
 
 .test {
