--- a/src/stylesheets/test.scss
+++ b/src/stylesheets/test.scss
@@ -2,7 +2,9 @@
 
 @import "~slick-carousel/slick/slick";
 @import "modules/slider";
+@import "modules/test/test-slider";
 @import "modules/modal";
+
 
 .test {
 	color: #fff;
