--- a/src/html/layouts/base.twig
+++ b/src/html/layouts/base.twig
@@ -4,6 +4,16 @@
   <meta charset="utf-8">
   <meta name="Author" content=""/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+
+	<link rel="shortcut icon" href="/favicon.ico"/>
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/manifest/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/assets/manifest/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="/assets/manifest/android-chrome-192x192.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/assets/manifest/favicon-16x16.png">
+	<link rel="manifest" href="/assets/manifest/site.webmanifest">
+	<link rel="mask-icon" href="/assets/manifest/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
   {% block meta %}{% endblock %}
   <title>{% block title %}Title{% endblock %}</title>
 	<meta name="description" content="{% block description %}{% endblock %}"/>        
