--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -2,7 +2,7 @@
 {% from '/macros/icon.twig' import icon %}
 
 {% set headerAttrs = {
-	'class': 'header_transparent',
+	'class': 'header_light'
 } %}
 
 {% block title %}Page test{% endblock %}
