Lazy Load Sizes

--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -9,7 +9,7 @@
 
 {% block body %}
 		<div class="test">
-			<section class="test__section preface lazyload" data-src="assets/images/test/back.jpg" data-scroll-section>
+			<section class="test__section preface lazyload" data-bg="assets/images/test/back.jpg">
 				<div class="container">
 					<div class="preface__holder">
 						<h1 class="preface__title">Test</h1>
@@ -26,14 +26,14 @@
 					</div>
 				</div>
 			</section>
-			<section class="test__section test__section_1" data-scroll-section>
+			<section class="test__section test__section_1">
 				<canvas id="canvas" class="test__canvas"></canvas>
 				<div class="container">
 					<div class="test__holder">
 						<div class="row">
 							<div class="col-md-5">
 								<div class="test__img">
-									<img data-src="assets/images/test/3-xl.jpg" class="lazyload" alt="">
+									<img class="lazyload" data-src="assets/images/test/1-xs.jpg" data-srcset="assets/images/test/1-xs.jpg 576w, assets/images/test/1-sm.jpg 768w, assets/images/test/1-md.jpg 992w, assets/images/test/1-lg.jpg 1200w" alt="">
 								</div>
 							</div>
 							<div class="col-md-6 offset-md-1 test__content">
@@ -292,14 +292,14 @@
 					requestAnimationFrame(tick);
 				</script>
 			</section>
-			<section class="test__section test__section_2" data-scroll-section>
+			<section class="test__section test__section_2">
 				<div class="container">
 					<div class="test__holder">
 						<div class="slider slider_bottomed">
 							<div class="slider__holder" id="slider">
-								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
-								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
-								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
+								<div class="slider__item" style="background-image: url('assets/images/test/2-xl.jpg');"></div>
+								<div class="slider__item" style="background-image: url('assets/images/test/2-xl.jpg');"></div>
+								<div class="slider__item" style="background-image: url('assets/images/test/2-xl.jpg');"></div>
 							</div>
 							<div class="slider__nav"></div>
 						</div>
@@ -307,14 +307,14 @@
 					</div>
 				</div>
 			</section>
-			<section class="test__section test__section_3" data-scroll-section>
+			<section class="test__section test__section_3">
 				<div class="container">
 					<div class="test__holder">
 						<div class="row">
 							<div class="col-md-5">
 								<h2 class="test__title">Services</h2>
 								<div class="test__img">
-									<img data-src="assets/images/test/3-xl.jpg" class="lazyload" alt="">
+									<img class="lazyload" data-src="assets/images/test/3-xs.jpg" data-srcset="assets/images/test/3-xs.jpg 576w, assets/images/test/3-sm.jpg 768w, assets/images/test/3-md.jpg 992w, assets/images/test/3-lg.jpg 1200w" alt="">
 								</div>
 								{{ icon('social-youtube' , {'width': 20, 'height': 20}) }}
 							</div>
@@ -326,7 +326,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="test__section test__section_2" data-scroll-section>
+			<section class="test__section test__section_2">
 				<div class="container">
 					<div class="test__holder">
 						<div class="row">
@@ -337,7 +337,7 @@
 							<div class="col-md-6 offset-md-1">
 								<h2 class="test__title">Test</h2>
 								<div class="test__img">
-									<img data-src="assets/images/test/3-xl.jpg" class="lazyload" alt="">
+									<img class="lazyload" data-src="assets/images/test/4-xs.jpg" data-srcset="assets/images/test/4-xs.jpg 576w, assets/images/test/4-sm.jpg 768w, assets/images/test/4-md.jpg 992w, assets/images/test/4-lg.jpg 1200w" alt="">
 								</div>
 								{{ icon('social-youtube' , {'width': 20, 'height': 20}) }}
 							</div>
@@ -345,14 +345,14 @@
 					</div>
 				</div>
 			</section>
-			<section class="test__section test__section_3" data-scroll-section>
+			<section class="test__section test__section_3">
 				<div class="container">
 					<div class="test__holder">
 						<div class="row">
 							<div class="col-md-5">
 								<h2 class="test__title">Contact Us</h2>
 								<div class="test__img">
-									<img class="lazyload" data-src="assets/images/test/3-xl.jpg" alt="">
+									<img class="lazyload" data-src="assets/images/test/5-xs.jpg" data-srcset="assets/images/test/5-xs.jpg 576w, assets/images/test/5-sm.jpg 768w, assets/images/test/5-md.jpg 992w, assets/images/test/5-lg.jpg 1200w" alt="">
 								</div>
 								{{ icon('social-youtube' , {'width': 20, 'height': 20}) }}
 							</div>
