--- a/src/html/partials/footer.twig
+++ b/src/html/partials/footer.twig
@@ -1,8 +1,10 @@
+{% from '../macros/icon.twig' import icon %}
+
 <footer class="footer">
 	<div class="container">
 			<div class="footer__holder">
 				<a href="/" class="footer__logo">
-					<img src="assets/images/logo.svg" alt="Project">
+					{{ icon('logo' , {'width': 50, 'height': 50}) }}
 				</a>
 				<nav class="footer-nav">
 					<ul>
