--- a/src/stylesheets/modules/_footer.scss
+++ b/src/stylesheets/modules/_footer.scss
@@ -18,6 +18,7 @@
 		display: block;
 		text-align: center;
 		margin: 0 auto 20px;
+		color: #000;
 
 		@include media-breakpoint-up(sm) {
 			text-align: left;
