--- a/src/stylesheets/settings/_breakpoints.scss
+++ b/src/stylesheets/settings/_breakpoints.scss
@@ -8,7 +8,9 @@ $grid-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 992px,
-  xl: 1200px
+  xl: 1200px,
+  xxl: 1440px,
+  xxxl: 1920px
 ) !default;
 
 //@include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
@@ -23,5 +25,7 @@ $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1140px
+  xl: 1140px,
+  xxl: 1440px,
+  xxxl: 1920px
 ) !default;
