--- a/src/html/partials/ham-panel.twig
+++ b/src/html/partials/ham-panel.twig
@@ -4,7 +4,18 @@
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About Us</a></li>
-				<li><a href="#">Services</a></li>
+				<li class="has-children">
+					<a href="#">Services</a>
+					<div class="sub-nav">
+						<ul>
+							<li><a href="#">Service Service1 </a></li>
+							<li><a href="#">Service Service2</a></li>
+							<li><a href="#">Service Service3</a></li>
+							<li><a href="#">Service Service4</a></li>
+							<li><a href="#">Service Service5</a></li>
+						</ul>
+					</div>
+				</li>
 				<li class="active"><a href="test.html">Test</a></li>
 				<li><a href="#">Contact Us</a></li>
 			</ul>
