--- a/src/stylesheets/modules/_header.scss
+++ b/src/stylesheets/modules/_header.scss
@@ -59,6 +59,10 @@
 	&_light .main-nav {
 		ul {
 			li {
+				&.has-children:before {
+					border-top-color: #fff;
+				}
+
 				a {
 					color: #fff;
 
@@ -73,12 +77,19 @@
 	&_light.active .main-nav {
 		ul {
 			li {
+				&.has-children:before {
+					border-top-color: #000;
+				}
+
 				a {
 					color: #000;
 
 					&:before {
 						background-color: #000;
 					}
+				}
+				&:hover > a {
+					//background-color: rgba(0, 0, 0, .2);
 				}
 			}
 		}
@@ -156,22 +167,44 @@
 		display: block;
 	}
 
-	ul {
+	& > ul {
 		list-style: none;
 		display: flex;
 		justify-content: space-around;
 		padding-left: 0;
 		margin: 0;
 
-		li {
-			padding: 30px 0;
+		& > li {
+			position: relative;
+			background-color: rgba(255, 255, 255, 0);
+			transition: background-color .3s ease-in-out;
 
-			a {
+			&.has-children {
+				padding-right: 20px;
+				cursor: pointer;
+
+				&:before {
+					content: '';
+					border: 7px solid transparent;
+					border-top-color: #000;
+					position: absolute;
+					right: 7px;
+					top: 7px;
+					bottom: 0;
+					margin: auto 0;
+					width: 0;
+					height: 0;
+				}
+			}
+
+			& > a {
 				text-decoration: none;
 				color: #000;
 				white-space: nowrap;
-				position: relative;
-				padding: 10px 0;
+				padding: 30px 15px;
+				display: inline-block;
+				vertical-align: top;
+				
 
 				&:before {
 					content: '';
@@ -179,21 +212,64 @@
 					opacity: 0;
 					position: absolute;
 					bottom: 0;
+					left: 0;
 					width: 100%;
 					height: 3px;
 					transition: opacity .3s ease-in-out;
 				}
+			}
 
-				&:hover {
-					&:before {
-						opacity: 1;
-					}
+			&:hover {
+				background-color: rgba(255, 255, 255, .3);
+
+				a:before {
+					opacity: 1;
 				}
 			}
 
-			&.active a {
+			&.active > a {
 				&:before {
 					opacity: 1;
+				}
+			}
+
+			&:hover .sub-nav {
+				opacity: 1;
+				transform: scaleY(1);
+			}
+		}
+	}
+
+	.sub-nav {
+		position: absolute;
+		top: 100%;
+		text-align: left;
+		background-color: rgba(255, 255, 255, 1);
+		opacity: 0;
+		overflow: hidden;
+		transition: transform .3s ease-in-out, opacity .5s ease-in-out;
+		transform: scaleY(0);
+		transform-origin:  top;
+
+		ul {
+			padding: 15px 0;
+
+			li {
+				display: block;
+				min-width: 200px;
+
+				a {
+					color: #000;
+					text-decoration: none;
+					padding: 10px 15px;
+					display: block;
+					background-color: rgba(0, 0, 0, 0);
+					transition: all .3s ease-in-out;
+
+					&:hover {
+						background-color: rgba(0, 0, 0, .3);
+						color: #fff;
+					}
 				}
 			}
 		}
