ham-panel sub-menu

--- a/src/html/partials/ham-panel.twig
+++ b/src/html/partials/ham-panel.twig
@@ -5,7 +5,7 @@
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About Us</a></li>
 				<li class="has-children">
-					<a href="#">Services</a>
+					<span>Services</span>
 					<div class="sub-nav">
 						<ul>
 							<li><a href="#">Service Service1 </a></li>
