active menu item

--- a/src/html/partials/ham-panel.twig
+++ b/src/html/partials/ham-panel.twig
@@ -16,7 +16,7 @@
 						</ul>
 					</div>
 				</li>
-				<li class="active"><a href="test.html">Test</a></li>
+				<li {% if curPage == "test" %} class="active"{% endif %}><a href="test.html">Test</a></li>
 				<li><a href="#">Contact Us</a></li>
 			</ul>
 		</nav>
