--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -3,7 +3,7 @@
 
 {% set headerAttrs = {
 	'class': 'header_light'
-} %}
+} %}d
 
 {% set curPage = 'test' %}
 
@@ -11,7 +11,7 @@
 
 {% block body %}
 		<div class="test">
-			<section class="test__section preface lazyload" data-bg="assets/images/test/back.jpg">
+			<section id="section0" class="test__section preface lazyload" data-bg="assets/images/test/back.jpg">
 				<div class="container">
 					<div class="preface__holder">
 						<h1 class="preface__title">Test</h1>
@@ -23,12 +23,12 @@
 							<b>caption</b>
 						</div>
 						<div class="preface__btn">
-							<a class="button button_size_xs popup-modal" data-fancybox data-src="#dialog-content" href="#"><span class="button__inner">ПОДРОБНЕЕ</span></a>
+							<a class="button button_size_xs popup-modal" data-fancybox data-src="#dialog-content"><span class="button__inner">ПОДРОБНЕЕ</span></a>
 						</div>
 					</div>
 				</div>
 			</section>
-			<section class="test__section test__section_1">
+			<section id="section1" class="test__section test__section_1">
 				<canvas id="canvas" class="test__canvas"></canvas>
 				<div class="container">
 					<div class="test__holder">
@@ -294,7 +294,7 @@
 					requestAnimationFrame(tick);
 				</script>
 			</section>
-			<section class="test__section test__section_2">
+			<section id="section2" class="test__section test__section_2">
 				<div class="container">
 					<div class="test__holder">
 						<div class="slider slider_bottomed">
@@ -309,7 +309,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="test__section test__section_3">
+			<section id="section3" class="test__section test__section_3">
 				<div class="container">
 					<div class="test__holder">
 						<div class="row">
@@ -328,7 +328,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="test__section test__section_4">
+			<section id="section4" class="test__section test__section_4">
 				<div class="container">
 					<div class="test__holder">
 						<div class="row">
@@ -347,7 +347,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="test__section test__section_5">
+			<section id="section5" class="test__section test__section_5">
 				<div class="container">
 					<div class="test__holder">
 						<div class="row">
