--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -14,7 +14,7 @@
 html {
     height: 100%;
     -webkit-overflow-scrolling: touch;
-    scroll-behavior: smooth;
+    //scroll-behavior: smooth;
     font-size: 62.5%; // 1rem === 10px
 }
 body {
