--- a/src/html/index.twig
+++ b/src/html/index.twig
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.twig' %}
 
+{% block title %}Project{% endblock %}
+
 {% block body %}
     {% include 'partials/landing/intro.twig' %}
 {% endblock %}
