--- a/src/html/layouts/base.twig
+++ b/src/html/layouts/base.twig
@@ -31,6 +31,7 @@
 </head>
 <body data-preload>
 	<div class="page-content-wrapper">
+		<div class="preloader visible"><div class="preloader__loader"></div></div>
 		{% block header %}
 			{% include "../partials/header.twig" with { navigation: header.navigation } %}
 		{% endblock %}
