--- a/src/html/layouts/base.twig
+++ b/src/html/layouts/base.twig
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" href="assets/stylesheets/global.min.css" />
 	{% block stylesheets %}{% endblock %}
 </head>
-<body data-preload>
+<body data-plugin="reveal" data-preload>
 	<div class="page-content-wrapper">
 		<div class="preloader visible"><div class="preloader__loader"></div></div>
 		{% block header %}
